# TRCV_2023

./: run.sh
install/: local_setup.sh  setup.sh
install/cv_tensorrt/share/cv_tensorrt/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cv_tensorrt/share/cv_tensorrt/launch/: cv_tensorrt_launch.py
log/: latest_build
src/cv_tensorrt/: CMakeLists.txt
src/cv_tensorrt/config/: autoAim.yaml
src/cv_tensorrt/include/auto_aim/: YOLO.hpp
src/cv_tensorrt/lib/yolov5/: CMakeLists.txt
src/cv_tensorrt/lib/yolov5/src/: postprocess.cpp  postprocess.h
src/cv_tensorrt/src/: Camera.cpp  YOLO.cpp  main.cpp
